@@ -1,5 +1,10 @@
 package tcp.server;
 
+import core.services.CustomerService;
+import core.services.EventService;
+import core.services.TicketService;
+import idGenerator.idService.IDService;
+
 import java.io.IOException;
 import java.net.ServerSocket;
 import java.net.Socket;
@@ -7,45 +12,53 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
 public class TCPHost {
+
     private ServerSocket serverSocket;
     private final ExecutorService threadPool;
     private final int port;
-    private final RequestHandler handler;
+
+    private final EventService eventService;
+    private final CustomerService customerService;
+    private final TicketService ticketService;
 
     public TCPHost(int port) {
         this.threadPool = Executors.newCachedThreadPool();
         this.port = port;
-        this.handler = new RequestHandler();
+
+        IDService idService = new IDService(10000L, 99999L);
+        this.ticketService = new TicketService(idService);
+        this.customerService = new CustomerService(ticketService, idService);
+        this.eventService = new EventService(ticketService, idService);
+        ticketService.setCustomerService(customerService);
+        ticketService.setEventService(eventService);
     }
 
     public void start() {
-        try {
-            serverSocket = new ServerSocket(port);
-        } catch (IOException e) {
-            System.out.println("Port " + port + " bereits belegt, weiter...");
-            return;  // ← einfach weitermachen, Server läuft schon
-        }
-        
-        Thread.ofVirtual().start(() -> {
-            while (!serverSocket.isClosed()) {
-                try {
+        Thread serverThread = new Thread(() -> {
+            try {
+                serverSocket = new ServerSocket(port);
+                System.out.println(
+                    "Server started. Listening on port " +
+                    serverSocket.getLocalPort()
+                );
+                while (!serverSocket.isClosed()) {
                     Socket clientSocket = serverSocket.accept();
-                    threadPool.execute(new ClientHandler(clientSocket, this.handler));
-                } catch (IOException e) {
-                    if (!serverSocket.isClosed()) {
-                        System.err.println("Accept-Fehler: " + e.getMessage());
-                    }
+                    System.out.println(
+                        "New client connected: " +
+                        clientSocket.getRemoteSocketAddress()
+                    );
+                    threadPool.submit(new ClientHandler(clientSocket, ticketService, customerService, eventService));
                 }
+                serverSocket.close();
+            } catch (IOException e) {
+                System.err.println(
+                    "Caught IOException on ServerSocket creation: " +
+                    e.getMessage()
+                );
             }
         });
+        serverThread.start();
     }
 
-    public void stop() {
-        try {
-            threadPool.shutdown();
-            if (serverSocket != null) serverSocket.close();
-        } catch (IOException e) {
-            System.err.println("Fehler beim Stoppen: " + e.getMessage());
-        }
-    }
+
 }
